fixed pagination mobile css

--- a/src/App.css
+++ b/src/App.css
@@ -621,6 +621,24 @@ header .topNav .bodyTopNav ul li a {
   .form .form-group input {
     width: 100%;
   }
+
+  /* ////////////////////////////////////////////////////////////////////////////// */
+  /* ////////////////////////////////////////////////////////////////////////////// */
+  /* PAGINATING PAGE */
+  /* ////////////////////////////////////////////////////////////////////////////// */
+
+  .pagination ul > li {
+    display: inline;
+    margin-right: 10px;
+  }
+
+  .pagination ul li button {
+    width: 30px;
+    height: 25px;
+
+    border-radius: 60px;
+    font-size: 1em;
+  }
 }
 
 /* ////////////////////////////////////////////////////////////////////////////// */
